feat #258: Elasticsearch 기능 코드 수정